# lorecraft

./: .gitignore  .prettierrc  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
openai_lib/: Cargo.toml
openai_lib/src/: client.rs  client_config.rs  error.rs  lib.rs
openai_lib/src/assistant/: assistant_client.rs  assistant_object.rs  create_assistant_request.rs  delete_assistant_response.rs  mod.rs
openai_lib/src/audio/: audio_client.rs  create_speech_request.rs  mod.rs
openai_lib/src/chat_completion/: chat_completion_client.rs  chat_completion_message.rs  chat_completion_object.rs  log_probability.rs  mod.rs  usage_statistics.rs
openai_lib/src/common/: error.rs  metadata.rs  mod.rs  tool.rs  tool_call.rs
openai_lib/src/image/: create_image_client.rs  create_image_request.rs  create_image_response.rs  image_object.rs  image_quality.rs  image_size.rs  image_style.rs  mod.rs  response_format.rs
openai_lib/src/message/: create_message_request.rs  list_messages_request.rs  list_messages_response.rs  message_client.rs  message_object.rs  mod.rs
openai_lib/src/model/: chat_model.rs  image_model.rs  mod.rs
openai_lib/src/moderation/: create_moderation_request.rs  mod.rs  moderation_client.rs  moderation_object.rs
openai_lib/src/rate_limit/: mod.rs
openai_lib/src/run/: create_run_request.rs  mod.rs  run_client.rs  run_object.rs  submit_tool_outputs_request.rs
openai_lib/src/thread/: create_thread_request.rs  delete_thread_response.rs  mod.rs  thread_client.rs  thread_object.rs  tool_output.rs
openai_lib/src/tool/: mod.rs  tool.rs  tool_call.rs
src/: App.tsx  main.css  (+1 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/prompts/architect/: example1.json  example1.yaml  example2.json  example2.yaml  main.txt
src-tauri/prompts/character_actor/: example1_input.json  give_function.json  main.txt  trade_function.json
src-tauri/prompts/character_detail/: example1_input.json  example1_output.json  example2_input.json  example2_output.json  main.txt
src-tauri/prompts/game_designer/: example1_input.yaml  example1_output.yaml  example2_input.yaml  example2_output.yaml
src-tauri/prompts/item_detail/: example1_input.json  example1_output.json  example2_input.json  example2_output.json  main.txt
src-tauri/prompts/narrative/: example1_input.json  example1_output.json  example2_input.json  example2_output.json  main.txt
src-tauri/prompts/narrative_music/: main.txt
src-tauri/prompts/narrator/: add_item_function.json  character_interact_function.json  end_game_function.json  example_input.json  main.txt  new_scene_function.json  remove_item_function.json
src-tauri/prompts/scene_designer/: example1.yaml  main.txt
src-tauri/prompts/scene_detail/: example1_input.json  example1_output.json  example2_input.json  example2_output.json  main.txt
src-tauri/prompts/scene_summary/: example1_input.json  example1_output.json  example2_input.json  example2_output.json  main.txt
src-tauri/prompts/summary/: example1.json  example2.json  main.txt
src-tauri/prompts/testing/: game_summary.yaml  (+1 more)
src-tauri/src/: main.rs
(+273 files in other folders)
