[package]
name = "lorecraft"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-remove-dir", "process-exit", "fs-copy-file", "fs-exists", "fs-read-file", "fs-read-dir", "path-all", "protocol-asset", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde_yaml = "0.9.29"
rand = "0.8.5"
log = "0.4.20"
dirs = "5.0.1"
tokio = { version = "1.35.1", features = ["full"] }
base64 = "0.21.5"
fern = "0.6.2"
futures = "0.3.30"
anyhow = "1.0.78"
openai_lib = { path = "../openai_lib" }
nosleep = "0.2.1"
fs2 = "0.4.3"
bytes = "1.5.0"
assert-json-diff = "2.0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
